--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^4.0.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
