Final branding sweep: replaced all VoiceReq references with Morti Projects

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: voicereq-ai
+    name: morti-projects
     runtime: node
     buildCommand: npm install
     startCommand: node server.js
