--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^2.0.2",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "xss": "^1.0.15"
   },
   "engines": {
     "node": ">=16.0.0"
