Security: Complete Two-Factor Authentication (2FA) implementation

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.3",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
+    "otplib": "^13.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
+    "qrcode": "^1.5.4",
     "ws": "^8.14.2",
     "xss": "^1.0.15"
   },
