feat: import project from ZIP (reverse of export) with auto-detect name, requirements, transcript, and assets

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.6.2",
