Major update: contact page, about page, signup with approval, pricing, MFA prompt, security audit (ownership checks on all API endpoints), feature request system, session page UX consistency, landing page AI/SMB messaging, login page redesign

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.3",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "otplib": "^13.3.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
