--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "qrcode": "^1.5.4",
+    "stripe": "^17.5.0",
     "ws": "^8.14.2",
     "xss": "^1.0.15"
   },
