--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qrcode": "^1.5.4",
     "stripe": "^17.5.0",
     "ws": "^8.14.2",
+    "xlsx": "^0.18.5",
     "xss": "^1.0.15"
   },
   "engines": {
