--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
     "otplib": "^13.3.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "qrcode": "^1.5.4",
