--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "otplib": "^13.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-microsoft": "^2.1.0",
     "pdf-parse": "^2.4.5",
     "pg": "^8.18.0",
     "qrcode": "^1.5.4",
